--- a/index.html
+++ b/index.html
@@ -25,18 +25,21 @@
         <div class="main__card-content">
           <h1>Equilibrium #3429</h1>
           <p>Our Equilibrium collection promotes balance and calm.</p>
-          <div class="days-left">
+          <div class="currency-info">
             <div class="eth">
-              <img src="/images/icon-ethereum.svg" alt="" />
+              <img src="/images/icon-ethereum.svg" alt="Ethereum logo" />
               <p>0.041ETH</p>
             </div>
-            <div class="days-left">
-              <div class="days">
-                <img src="/images/icon-clock.svg" alt="" />
-                <p>3 days left</p>
-              </div>
+            <div class="days">
+              <img src="/images/icon-clock.svg" alt="Clock icon" />
+              <p>3 days left</p>
             </div>
           </div>
+        </div>
+        <hr />
+        <div class="author">
+          <img src="/images/image-avatar.png" alt="Profile picture" />
+          <p>Creation of <span class="white"> Jules Wyvern</span></p>
         </div>
       </div>
     </main>
