Finished the desktop and tablet versions and added hover effects on text

--- a/index.html
+++ b/index.html
@@ -20,10 +20,15 @@
     <main class="main">
       <div class="main__card">
         <div class="main__card-image">
-          <img src="/images/image-equilibrium.jpg" alt="" />
+          <img src="/images/image-equilibrium.jpg" alt="" class="eth-icon" />
+          <div class="hover">
+            <img src="/images/icon-view.svg" alt="Eye icon on hover" />
+          </div>
         </div>
         <div class="main__card-content">
-          <h1>Equilibrium #3429</h1>
+          <a href="#" class="white">
+            <h1>Equilibrium #3429</h1>
+          </a>
           <p>Our Equilibrium collection promotes balance and calm.</p>
           <div class="currency-info">
             <div class="eth">
@@ -39,7 +44,7 @@
         <hr />
         <div class="author">
           <img src="/images/image-avatar.png" alt="Profile picture" />
-          <p>Creation of <span class="white"> Jules Wyvern</span></p>
+          <p>Creation of <a href="#" class="white"> Jules Wyvern</a></p>
         </div>
       </div>
     </main>
