--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <div class="hover">
             <img src="/images/icon-view.svg" alt="Eye icon on hover" />
           </div>
+          <div class="overlay"></div>
         </div>
         <div class="main__card-content">
           <a href="#" class="white">
