Fixed the image flickering on hover

--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
       <div class="main__card">
         <div class="main__card-image">
           <img src="/images/image-equilibrium.jpg" alt="" class="eth-icon" />
-          <div class="hover">
+          <div class="overlay">
             <img src="/images/icon-view.svg" alt="Eye icon on hover" />
           </div>
-          <div class="overlay"></div>
         </div>
         <div class="main__card-content">
           <a href="#" class="white">
